--- a/form.html
+++ b/form.html
@@ -17,8 +17,57 @@
 		</style>
 	</head>
 	<body>
+		<!-- name/ text input-->
+
 		<div class="container">
-			
-		</div>
-	</body>
+			<form class="form-horizontal">
+				<div class="form-group">
+    				<label class="col-sm-2 control-label">name:</label>
+    				<div class="col-sm-8"><input type="text" class="form-control"></div>
+				</div>
+				<!-- gender/ radio selection-->
+				<div class="form-group">
+					<label class="col-sm-2 control-label">gender:  </label>
+					<div class="col-sm-8">
+						<div class="radio">
+							<label> <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">male </label>
+						</div>
+						<div class="radio">
+							<label> <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">female </label>
+						</div>
+						<div class="radio">
+							<label> <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>other </label>
+						</div>
+					</div> <!-- end column -->
+				</div> <!--end form group -->
+			<!-- major/ text box-->
+			<div class="form-group">
+				<label class="col-sm-2 control-label">major:</label>
+				<div class="col-sm-8">
+					<select multiple class="form-control">
+						<option>math</option>
+  						<option selected="true">computer science</option>
+  						<option>physics</option>
+					</select>
+				</div>
+			</div>
+			<!-- notes -->
+			<div class="form-group">
+				<label class="col-sm-2 control-label">notes:</label>
+				<div class="col-sm-8">
+					<textarea class="form-control" rows="2"></textarea>
+				</div>
+			</div>
+				<!-- submit button -->
+				<div class="form-group">
+					<label class="col-sm-2 control-label"> </label>
+
+					<div class="col-sm-8">
+						<button type="button" class="btn btn-primary"> submit</button>
+					</div>
+				</div>
+		</form> <!-- end form -->
+</div> <!-- end container -->
+
+</body>
 </html>
