--- a/panel.html
+++ b/panel.html
@@ -18,7 +18,24 @@
 	</head>
 	<body>
 		<div class="container">
-			
+			<div class="panel panel-default"> <!--panel 1 -->
+				<div class="panel-heading">heading</div>
+				<div class="panel-body">body</div>
+				<div class="panel-footer">footer</div>
+		   </div>
+		   <div class="panel panel-success">
+		   	<div class="panel-heading">heading</div>
+		   	<div class="panel-body">body</div>
+		   </div>
+		   <div class="panel panel-warning">
+			   <div class="panel-heading">heading</div>
+			   <div class="panel-body">body</div>
+		   </div>
+		   <div class="panel panel-danger">
+			   <div class="panel-heading">heading</div>
+			   <div class="panel-body">body</div>
+		   </div>
+
 		</div>
 	</body>
 </html>
