--- a/table.html
+++ b/table.html
@@ -18,7 +18,32 @@
 	</head>
 	<body>
 		<div class="container">
-			
+				<table class="table table-condensed  table-striped">
+					<thead>
+						<tr>
+							<th>#</th>
+							<th>first</th>
+							<th>last</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th>1</th>
+							<td>friedrich</td>
+							<td>holzknecht</td>
+						</tr>
+						<tr>
+							<th>2</th>
+							<td>ingmar</td>
+							<td>schwangau</td>
+						</tr>
+						<tr>
+							<th>3</th>
+							<td>gilbert</td>
+							<td>strohkirch</td>
+						</tr>
+					</tbody>
+				</table>
 		</div>
 	</body>
 </html>
