finished icons exercise

--- a/icons.html
+++ b/icons.html
@@ -18,7 +18,23 @@
 	</head>
 	<body>
 		<div class="container">
-			
+			<form class="form-inline">
+			  <div class="form-group">
+				<label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
+				<div class="input-group">
+				  <input type="text" class="form-control" id="exampleInputAmount" placeholder="amount">
+				  <div class="input-group-addon">
+					  <span class="glyphicon glyphicon-bitcoin"></span>
+				  </div>
+				</div>
+			  </div>
+			  <button type="submit" class="btn btn-primary">
+				  <span class="glyphicon glyphicon-shopping-cart"></span>
+			  </button>
+			  <button type="submit" class="btn btn-primary">
+				  <span class="glyphicon glyphicon-trash"></span>
+			  </button>
+			</form>
 		</div>
 	</body>
 </html>
