--- a/z_test.html
+++ b/z_test.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+
+<!-- NAV BAR -->
+
 <!-- // have a button to toggle the navbar when it is in the compact mode -->
     <nav class="navbar navbar-inverse navbar-static-top"> <div class="container">
     <div class="navbar-header">
@@ -29,29 +32,127 @@
     </ul> </div>
     </div> </nav>
 
+    <!-- basic content -->
+    <div class="container">
+        <h1>this is a header</h1>
+        <p>this is a paragraph with some text.</p>
+    </div>
 
-<div class="container">
-    <h1>this is a header</h1>
-    <p>this is a paragraph with some text.</p>
-</div>
 
-<div class="container">
-    <h3> Columns Example</h3>
-</div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-sm-6 col-md-8"> .col-sm-6 .col-md-8  </div>
-		<div class="col-sm-6 col-md-4"> .col-sm-6 .col-md-4 </div>
-	</div>
-	<div class="row">
-		<div class="col-xs-6 col-sm-4"> .col-xs-6 .col-sm-4 </div>
-		<div class="col-xs-6 col-sm-4"> .col-xs-6 .col-sm-4 </div>
-		<div class="col-xs-12 col-sm-4"> .col-xs-12 .col-sm-4 </div>
-	</div>
-</div>
+<!-- ICONS -->
 
-<!-- Nested Columns -->
+    <h2>Icons </h2>
+    <div class="container">
+        <button type="button" class="btn btn-primary">
+            <span class="glyphicon glyphicon-star"></span>
+            example
+        </button>
+        <button type="button" class="btn btn-primary">
+            example
+            <span class="glyphicon glyphicon-star"></span>
+        </button>
+        <div class="btn-group">
+            <button type="button" class="btn btn-default">
+                <span class="glyphicon glyphicon-align-left"></span>
+            </button>
+            <button type="button" class="btn btn-default">
+                <span class="glyphicon glyphicon-align-center"></span>
+            </button>
+            <button type="button" class="btn btn-default">
+                <span class="glyphicon glyphicon-align-right"></span>
+            </button>
+            <button type="button" class="btn btn-default">
+                <span class="glyphicon glyphicon-align-justify"></span>
+            </button>
+        </div>
+    </div>
+
+    <div class="container">
+        <form class="form-inline">
+          <div class="form-group">
+            <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
+            <div class="input-group">
+              <!-- <div class="input-group-addon">$</div> -->
+              <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount">
+              <div class="input-group-addon">
+                  <span class="glyphicon glyphicon-bitcoin"></span>
+              </div>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">
+              <span class="glyphicon glyphicon-shopping-cart"></span>
+          </button>
+          <button type="submit" class="btn btn-primary">
+              <span class="glyphicon glyphicon-trash"></span>
+          </button>
+        </form>
+
+    </div>
+
+
+
+
+
+<!-- TABLES -->
+
+    <h2>Table </h2>
+    <div class="container">
+        <table class="table table-condensed  table-striped">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>first</th>
+                    <th>last</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <td>friedrich</td>
+                    <td>holzknecht</td>
+                </tr>
+                <tr>
+                    <th>2</th>
+                    <td>ingmar</td>
+                    <td>schwangau</td>
+                </tr>
+                <tr>
+                    <th>3</th>
+                    <td>gilbert</td>
+                    <td>strohkirch</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+
+
+
+
+
+<!-- Columns -->
+
+    <h2>Columns </h2>
+    <div class="container">
+        <h3> Columns Example</h3>
+    </div>
+
+    <div class="container">
+    	<div class="row">
+    		<div class="col-sm-6 col-md-8"> .col-sm-6 .col-md-8  </div>
+    		<div class="col-sm-6 col-md-4"> .col-sm-6 .col-md-4 </div>
+    	</div>
+    	<div class="row">
+    		<div class="col-xs-6 col-sm-4"> .col-xs-6 .col-sm-4 </div>
+    		<div class="col-xs-6 col-sm-4"> .col-xs-6 .col-sm-4 </div>
+    		<div class="col-xs-12 col-sm-4"> .col-xs-12 .col-sm-4 </div>
+    	</div>
+    </div>
+
+
+<!-- NESTED Columns -->
 
 <div class="container">
     <h3> Nested columns example: </h3>
@@ -74,6 +175,89 @@
                  <div class="col-md-4"> 2 </div>
              </div>
          </div>
+
+
+
+<!-- FORMS -->
+
+<h2>Form #1</h2>
+         <div class="container">
+         <form role="form">
+             <div class="form-group">
+                 <label>username:</label><input type="text" class="form-control">
+             </div>
+             <div class="form-group">
+                 <label>password:</label><input type="password" class="form-control">
+             </div>
+             <button class="btn btn-primary">login</button>
+         </form>
+
+        <h2>Form #2</h2>
+
+         <form class="form-horizontal">
+             <div class="form-group">
+                 <label class="col-sm-2 control-label">username:</label>
+                 <div class="col-sm-8">
+                     <input class="form-control" type="text">
+                 </div>
+             </div>
+             <div class="form-group">
+                 <label class="col-sm-2 control-label">password:</label> <div class="col-sm-8">
+                     <input class="form-control" type="password"> </div>
+             </div>
+             <div class="form-group">
+                 <div class="col-sm-offset-2 col-sm-8">
+                     <button class="btn btn-primary">login</button>
+             </div>
+            </div>
+         </form>
+     </div> <!--end container-->
+
+
+
+<!-- PANELS -->
+<h2>Panels </h2>
+
+    <div class="container">
+         <div class="panel panel-default"> <!--panel 1 -->
+             <div class="panel-body">
+                 body
+             </div>
+         </div>
+         <div class="panel panel-default"> <!--panel 2 -->
+             <div class="panel-heading">heading</div>
+             <div class="panel-body">body</div>
+             <div class="panel-footer">footer</div>
+        </div>
+
+        <!--panel other -->
+        <div class="panel panel-primary">
+            <div class="panel-heading">heading primary</div>
+            <div class="panel-body">body</div>
+        </div>
+        <div class="panel panel-success">
+            <div class="panel-heading">heading success</div>
+            <div class="panel-body">body</div>
+        </div>
+        <div class="panel panel-info">
+            <div class="panel-heading">heading info </div>
+            <div class="panel-body">body</div>
+        </div>
+        <div class="panel panel-warning">
+            <div class="panel-heading">heading warning</div>
+            <div class="panel-body">body</div>
+        </div>
+        <div class="panel panel-danger">
+            <div class="panel-heading">heading danger</div>
+            <div class="panel-body">body</div>
+        </div>
+    </div>
+<!--end Panels-->
+
+
+
+
+
 
 
 </body>
